Updated css and index

--- a/index.html
+++ b/index.html
@@ -1,49 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Joshua Cherry Professinal Profile</title>
-  <link rel="stylesheet" href="./assets/css/style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Professional Profile | Joshua Cherry</title>
 </head>
 
 <body>
-  <header>
-    <h1>Joshua Cherry</h1>
-    <nav>
-      <ul>
-        <li><a href="#">About Me</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Contact Me</a></li>
-        <li><a href="#">Resume</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <section>
-      <article>
-        <h2>About Me</h2>
+  </div>
+    <div class="header">
+        <h1>Joshua<span class="Cherry"> Cherry</span></h1>
         <div>
-          <p>A successful web developer is one that knows that there's always room to grow and learn. You may not use
-            every single tool that's offered to you, but it's always good to know that certain tools exist. Check out
-            these resources to broaden your knowledge:</p>
-          <ul>
-            <li>
-            image that needs to be imputed
-            </li>
-          </ul>
-          <p>work information</p>
-          <p>this is about me</p>
-        </div>
-      </article>
-    </section>
-  </main>
+          <section id="absolute-section">
+            <img id="absolute-box" src="images/Profile Pic.PNG" alt="Profile Pic"/>
+             <ul>
+                <li>
+                  <a href="#About-Me">About Me</a>
+                </li>
+                <li>
+                  <a href="#My-Work">My Work</a>
+                </li>
+                <li>
+                    <a href="#Contact-Me">Contact Me</a>
+                </li>
+            </ul>
+        </div>    
+    </div>
+  </div>
 
-  <footer>
-    <span>Thanks for visiting!</span>
-  </footer>
+    <div class="headline"></div>
+<div class="content">
+  <div id="About-Me" class="About-Me">
+        <img src="images/Interity.jpg" class="float-left" />
+        <h2>About Me</h2>
+        <p>
+          My experience as a Adjuster has helped me expand my legal knowledge and understanding with all forms of law regauding insaunce. My values regarding customer service, research and attention to detail have helped me support over thousands of clients. I know that my education and expertise can help me develop your legal firm's operations as well but I feel as a different call has uplifed me. 
+        </p> 
+        <p>
+          Video gaming has also been a part of my life and understanding the develepment of such producs always had me wanting to learn more. Looking into becoming a full-stack develper is my new mission in life.
+        </p> 
+        <p>
+          Highly detailed orientated with proven ability to reach targeted goal through strong organizational and excellent interpersonal skills will help me reach my goal.
+        </p>
+        <hr>
+  </div>
+        
+        
+     <div id="My-Work"></div> 
+  <div class="My-Work">
+        <h2>My Work</h2>
+        <a href="https://jaystarz360.github.io/Heriseon-Factor/">
+        <img src="images/Capture Horiseon.PNG" class="zoom" width="400px" class="float-right"/></a>  
+
+        <p>
+          Some of my work with HTML and CSS
+        </p> 
+        <hr>
+    </div>
+
+    <div id="Contact-Me"></div> 
+  <div class="Contact-Me">
+          <h2>Contact Me</h2>
+            <a href="https://github.com/Jaystarz360">
+            <img src="images/github-icon-38985.png" width="60" /></a> 
+            <br>
+            <hr>
+  </div>
 </body>
 
-</html>
+
